# token-sentiment-analyzer

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
docs/: application_description.txt
scripts/: generate_proof_screenshots.py
seeds/: default.txt
src/token_sentiment/: __init__.py  cli.py  config.py  dexscreener.py  lexicon.py  models.py  pipeline.py  tracker.py
tests/: test_lexicon.py  test_models.py  test_tracker.py
