[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "token-sentiment-analyzer"
version = "1.0.0"
description = "Real-time token sentiment analyzer — social signals + onchain metrics + lightweight MiMo synthesis for early-stage token risk assessment."
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "anhar125" }]
requires-python = ">=3.10"
keywords = ["crypto", "sentiment", "nlp", "onchain", "token-analysis"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "httpx>=0.27",
    "pydantic>=2.6",
    "rich>=13.7",
    "python-dotenv>=1.0",
    "click>=8.1",
    "tenacity>=8.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "respx>=0.21",
    "ruff>=0.4",
]

[project.scripts]
token-sentiment = "token_sentiment.cli:main"

[project.urls]
Homepage = "https://github.com/anhar125/token-sentiment-analyzer"
Issues = "https://github.com/anhar125/token-sentiment-analyzer/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
